templates/deep-learning-tools_template.yaml
---
# Source: deep-learning-tools/templates/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: release-name-deep-learning-tools
  annotations:
    appstore.uninett.no/contact_email: example@uninett.no
  labels:
    app: release-name-deep-learning-tools
    chart: "deep-learning-tools-9.1.1"
    release: "release-name"
    heritage: "Helm"
spec:
  podSelector:
    matchLabels:
      app: release-name-deep-learning-tools
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            name: kube-ingress
      ports:
        - protocol: TCP
          port: 8080
---
# Source: deep-learning-tools/templates/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: release-name-deep-learning-tools-all
  annotations:
    appstore.uninett.no/contact_email: example@uninett.no
  labels:
    app: release-name-deep-learning-tools
    chart: "deep-learning-tools-9.1.1"
    release: "release-name"
    heritage: "Helm"
spec:
  podSelector:
    matchLabels:
      app: release-name-deep-learning-tools
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            name: default
      ports:
        - protocol: TCP
---
# Source: deep-learning-tools/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-deep-learning-tools
  annotations:
    appstore.uninett.no/contact_email: example@uninett.no
  labels:
    app: release-name-deep-learning-tools
    chart: "deep-learning-tools-9.1.1"
    release: "release-name"
    heritage: "Helm"
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: release-name-deep-learning-tools-service
  selector:
    app: release-name-deep-learning-tools
---
# Source: deep-learning-tools/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-deep-learning-tools
  labels:
    app: release-name-deep-learning-tools
    chart: "deep-learning-tools-9.1.1"
    release: "release-name"
    heritage: "Helm"
  annotations:
    appstore.uninett.no/contact_email: example@uninett.no
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
        app: release-name-deep-learning-tools
        release: release-name
  template:
    metadata:
      annotations:
        checksum/config: 295c546e81ffc7170362120f1c035127c33042d73d1f22ca47f593a45eee93d2
        appstore.uninett.no/contact_email: example@uninett.no
      labels:
        app: release-name-deep-learning-tools
        chart: "deep-learning-tools-9.1.1"
        release: "release-name"
        heritage: "Helm"
    spec:
      volumes:
        - name: release-name-deep-learning-tools-rewrite-config
          configMap:
            name: release-name-deep-learning-tools-rewrite
            items:
            - key: default.conf
              path: default.conf
        - name: release-name-deep-learning-tools-nginx-config
          configMap:
            name: release-name-deep-learning-tools-rewrite
            items:
            - key: nginx.conf
              path: nginx.conf
        - name: oidcconfig
          secret:
            secretName: release-name-deep-learning-tools
        - name: notebook-config
          configMap:
            name: release-name-deep-learning-tools
            items:
            - key: notebook_config.py
              path: notebook_config.py
        - name: passwd
          configMap:
            name: release-name-deep-learning-tools
            items:
            - key: passwd
              path: passwd
        - name: group
          configMap:
            name: release-name-deep-learning-tools
            items:
            - key: group
              path: group
        - name: shm
          emptyDir:
            medium: Memory
            sizeLimit: 256M
      hostname: release-name-deep-learning-tools
      securityContext:
        runAsNonRoot: true
        fsGroup: 999
        
      containers:
      - name: proxy-rewriter
        image: nginx:1.21.0-alpine
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 9001
        securityContext:
          runAsUser: 100
        volumeMounts:
          - name: release-name-deep-learning-tools-rewrite-config
            mountPath: /etc/nginx/conf.d
          - name: release-name-deep-learning-tools-nginx-config
            mountPath: /etc/nginx/nginx.conf
            subPath: nginx.conf
      - name: auth-proxy
        image: sigma2as/goidc-proxy:next
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 8080
        securityContext:
          runAsUser: 65534
          readOnlyRootFilesystem: true
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 30
          timeoutSeconds: 30
        volumeMounts:
          - name: oidcconfig
            mountPath: /conf
        workingDir: /conf
      - name: jupyter
        image: quay.io/nird-toolkit/deep-learning-tools2:20220809-05c6827
        args: ["/usr/local/bin/start-notebook.sh"]
        resources:
          requests:
            cpu: 4
            memory: 4Gi
            nvidia.com/gpu: 1
          limits:
            cpu: 8
            memory: 4Gi
            nvidia.com/gpu: 1
        ports:
        - containerPort: 8888
        - containerPort: 6006
        - containerPort: 5000
        securityContext:
          runAsUser: 999
          runAsGroup: 999
        volumeMounts:
        - name: notebook-config
          mountPath: /home/notebook/.jupyter/notebook_config.py
          subPath: notebook_config.py
        
        - name: passwd
          mountPath: /etc/passwd
          subPath: passwd
        - name: group
          mountPath: /etc/group
          subPath: group
        - name: shm
          mountPath: /dev/shm
---
# Source: deep-learning-tools/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release-name-deep-learning-tools
  labels:
    app: release-name-deep-learning-tools
    chart: "deep-learning-tools-9.1.1"
    release: "release-name"
    heritage: "Helm"
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    appstore.uninett.no/contact_email: example@uninett.no
spec:
  tls:
    - secretName: wildcard-tls
      hosts:
         - example.localhost.com
         - tensorboard-example.localhost.com
         - mlflow-example.localhost.com
  rules:
    - host: example.localhost.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: release-name-deep-learning-tools
                port: 
                  number: 80
    - host: tensorboard-example.localhost.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: release-name-deep-learning-tools
                port: 
                  number: 80
    - host: mlflow-example.localhost.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: release-name-deep-learning-tools
                port: 
                  number: 80
